TH2-1356. Fix events overflow

--- a/src/styles/workspace.scss
+++ b/src/styles/workspace.scss
@@ -262,6 +262,7 @@
 
 	&__main {
 		flex-grow: 1;
+		height: 100%;
 	}
 
 	&.minified &__sidebar {
